--- a/index.html
+++ b/index.html
@@ -5,14 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
+    <link rel="stylesheet" href="./styles/style.css" />
+</head>
   <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
+      <nav>
+        <img src="./images/spotify-logo.png" alt="spotify-logo">
+        <ul>
+          <li><a href="Premium">Premium</a></li>
+          <li><a href="Discover">Discover</a></li>
+          <li><a href="Help">Help</a></li>
+          <li><a href="help">Download</a></li>
+        </ul>
+      </nav>
+      <header class="imgbg">
+        <h1>Music for everyone.</h1>
+          <p>Spotify is now free on mobile, tablet and computer.<br>
+          Listen to the right music, wherever you are.</p>
+      </header>
+      <div>
+        <h1>What's on Spotify</h1>
+      </div>
+      <section class="frog">
+        <div class="fboot">
+          <img src="./images/music-icon.png" alt="music icon">
+          <h4>Millions of songs</h4>
+          <p>There are millions of<br>songs on Spotify</p>
+        </div>
+        <div>
+          <img src="images/high-quality-icon.png" alt="HD Music">
+          <h4>HD Music</h4>
+          <p>Listen to music if you<br>were listening live</p>
+        </div>
+        <div>
+          <img src="images/devices-icon.png" alt="Stream Everywere">
+          <h4>Stream Everywhere</h4>
+          <p>Stream music on your<br>smartphoe, tablet or<br>computer</p>
+        </div>
+      </section>
+      <section class="bajo">
+        <img src="./images/spotify-icon-white.png">
+        <div>
+          
+        </div>
+      </section>
+      <!--
+      Millions of Songs There are millions of songs on Spotify HD Music
+      Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
+      It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
+      latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
+      own personal playlist. Or sit back and enjoy Radio.</p>
+    </section>-->
   </body>
 </html>
